* Remove old presentation * Add diagram: Cluster deployment and management

--- a/astrophysics_cluster.tex
+++ b/astrophysics_cluster.tex
@@ -109,6 +109,7 @@ Bellville, South Africa\\
 \titlepage
 \end{frame}
 
+\section{Executive Summary}
 \begin{frame}
 \frametitle{UWC Astrophysics Cluster}
 \begin{itemize}
@@ -162,99 +163,12 @@ Bellville, South Africa\\
 \end{itemize}
 \end{frame}
 
+\section{Cluster Deployment and Management}
+
+\pgfdeclareimage[width=\textwidth]{Cluster-Management}{images/cluster_management.png}
 \begin{frame}
-\frametitle{One, two, many HPCs}
-\begin{itemize}
-  \item Before 1990, HPC meant hugely expensive computers built on national or
-  regional scale
-  \item Institute-level computing in 1990s was dominated by individual SMP
-  machines
-  \item Mid-to-late 90s saw birth of the commodity cluster (Beowulf)
-\end{itemize}
+\frametitle{Cluster Deployment and Management}
+\pgfuseimage{Cluster-Management}
 \end{frame}
-
-\begin{frame}
-\frametitle{One, two, many HPCs (cont)}
-\begin{itemize}
-  \item Now: HPC everywhere, but skills hard to find
-  \item The few courses that exist focus on HPC programming (parallel
-  applications, MPI, etc)
-  \item HPC exists alongside ``cyberinfrastructure'' and ``cloud'': different
-\  environments but all based on complex and often poorly documented software
-\end{itemize}
-\begin{quote}
-``with limited resources and expertise, even simple data discovery, collection,
-analysis, management, and sharing tasks are difficult for small teams'' (Ian
-Foster, Computation Institute)
-\end{quote}
-\end{frame}
-
-\begin{frame}
-\frametitle{How to become a (better) HPC admin}
-\begin{itemize}
-  \item \uncover<1->{Most HPC admin knowledge is passed on peer-to-peer}
-  \item \uncover<1->{Admins rely on the ``social media'' of HPC: Mailing lists,
-  technical blogs, IRC}
-  \item \uncover<1->{Networking happens sporadically} 
-  \begin{itemize}
-    \item \uncover<2->{- HPC admins don't get out much}
-  \end{itemize} 
-\end{itemize}
-\end{frame}
-
-\begin{frame}
-\frametitle{The HPC Forum plan}
-\begin{itemize}
-  \item First face to face seminar day: mid-February 2014
-  \item Minimal wiki:
-  \href{http://hpcforum.sanbi.ac.za}{http://hpcforum.sanbi.ac.za}
-  \begin{itemize}
-    \item Will soon move to
-    \href{http://hpcforum.org.za}{http://hpcforum.org.za}
-  \end{itemize}
-  \item Grow (mailing list) membership
-  \item Keep producing (and linking to) tech blogs
-\end{itemize}
-\end{frame}
-
-\begin{frame}
-\frametitle{HPC research and teaching}
-\begin{itemize}
-    \item HPC admin has historically been seen as an operations issue
-    \item Academic interest has been limited and curricula non-existent
-    \pause
-    \item HPC Forum could:
-    \begin{itemize}
-      \item Collect and curate teaching materials on HPC admin
-      \item Provide space for learning and experimentation in HPC
-      \item Increase the profile of HPC as an area of research and learning
-      \item Create a collective experimental community for HPC technology
-      \item Contribute ``infrastructure code'' to a shared repository (e.g.
-      SAGridOps on Github)
-    \end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}
-\frametitle{Related initiatives}
-\begin{itemize}
-  \item Africa-Arabia Regional Operations Centre
-  \pause
-  \item SADC HPC Forum : human capital development in HPC
-\end{itemize}
-\end{frame}
-
-\begin{frame}[plain,c]
-\begin{center}
-\Huge{Over to you.}
-\end{center}
-\end{frame}
-
-% \begin{frame}
-% \frametitle{Outline}
-% \tableofcontents
-% % You might wish to add the option [pausesections]
-% \end{frame}
-
 
 \end{document}
